Max predefined widths capped at 256 (a test file had a 2nd row with a really high number in a field -> the app crashed due to out of memory) && Some UI polish

--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -351,22 +351,22 @@
                                     <action selector="switchChanged:" destination="pz8-yn-9xb" eventType="valueChanged" id="HFb-B9-nMg"/>
                                 </connections>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Group items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVD-7I-Sc7">
-                                <rect key="frame" x="18" y="25" width="94" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Grouped items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVD-7I-Sc7">
+                                <rect key="frame" x="18" y="25" width="113" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Group numbers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCP-dx-MJD">
-                                <rect key="frame" x="18" y="64" width="119" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Grouped numbers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCP-dx-MJD">
+                                <rect key="frame" x="18" y="64" width="139" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Column separator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgm-k5-oqy">
-                                <rect key="frame" x="16" y="103" width="137" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Show dot separator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgm-k5-oqy">
+                                <rect key="frame" x="16" y="103" width="150" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -379,8 +379,8 @@
                                     <action selector="switchChanged:" destination="pz8-yn-9xb" eventType="valueChanged" id="huq-hC-EIM"/>
                                 </connections>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Multiline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oql-nf-p8M">
-                                <rect key="frame" x="16" y="142" width="65" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Multiline rows" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oql-nf-p8M">
+                                <rect key="frame" x="16" y="142" width="105" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -426,6 +426,7 @@
                     <tabBarItem key="tabBarItem" title="Appearance" image="items_prefs_appearance" id="MuA-fR-pc4"/>
                     <connections>
                         <outlet property="fixedWidthAlternative" destination="Udj-C9-s6q" id="om1-B8-V92"/>
+                        <outlet property="fixedWidthAlternativeLabel" destination="LOG-bc-7NN" id="JCV-ev-Bad"/>
                         <outlet property="groupItems" destination="tvh-hw-pZM" id="87U-K3-xnZ"/>
                         <outlet property="groupNumbers" destination="0gR-qF-yWw" id="2Dj-Zs-k2D"/>
                         <outlet property="monospaced" destination="T0z-iu-r8v" id="AmS-zo-TgH"/>
@@ -703,7 +704,7 @@
                     </tableView>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems>
-                        <barButtonItem systemItem="edit" id="dz3-P4-gwo">
+                        <barButtonItem title="Columns" id="dz3-P4-gwo">
                             <connections>
                                 <segue destination="9lW-Nk-e8g" kind="show" identifier="ToEdit" id="oP3-ah-JeY"/>
                             </connections>
