--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -665,7 +665,7 @@
         <!--Items View Controller-->
         <scene sceneID="02F-tn-k6h">
             <objects>
-                <tableViewController id="yKV-vJ-ur4" customClass="ItemsViewController" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="yKV-vJ-ur4" customClass="ItemsViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qRd-ft-2oG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
