--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -446,15 +446,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refresh time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipr-y3-8kt">
-                                <rect key="frame" x="101.5" y="73" width="97" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="97" id="jv8-6p-qR7"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZWA-MD-FE0">
                                 <rect key="frame" x="237" y="20" width="51" height="31"/>
                                 <connections>
@@ -467,18 +458,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="gBR-8n-YBS">
-                                <rect key="frame" x="16" y="102" width="270" height="75"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="75" id="hbO-R8-vzZ"/>
-                                </constraints>
-                                <date key="date" timeIntervalSinceReferenceDate="541379584.38926601">
-                                    <!--2018-02-26 23:13:04 +0000-->
-                                </date>
-                                <connections>
-                                    <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="valueChanged" id="5zx-so-VO0"/>
-                                </connections>
-                            </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J1T-qI-A7A">
                                 <rect key="frame" x="114" y="210" width="72" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -487,17 +466,31 @@
                                     <segue destination="M8M-X0-2S8" kind="unwind" unwindAction="dismissSettingsViewAndShowHelp:" id="aDG-mF-v3z"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rwr-Qw-FYp">
+                                <rect key="frame" x="189" y="59" width="97" height="87"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="lMs-RE-JYJ" id="2oA-wp-asY"/>
+                                    <outlet property="delegate" destination="lMs-RE-JYJ" id="VUk-61-5q9"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refresh time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipr-y3-8kt">
+                                <rect key="frame" x="16" y="92" width="97" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="jv8-6p-qR7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gBR-8n-YBS" firstAttribute="top" secondItem="Ipr-y3-8kt" secondAttribute="bottom" constant="8" symbolic="YES" id="2Nd-aI-YW5"/>
                             <constraint firstItem="4L4-iK-a96" firstAttribute="leading" secondItem="lIB-Uc-ICq" secondAttribute="leading" constant="17" id="7z1-1T-Mmb"/>
                             <constraint firstItem="ZWA-MD-FE0" firstAttribute="leading" secondItem="4L4-iK-a96" secondAttribute="trailing" constant="77" id="FPV-cg-o6a"/>
                             <constraint firstItem="4L4-iK-a96" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="25" id="QuN-9G-76x"/>
-                            <constraint firstItem="lIB-Uc-ICq" firstAttribute="trailing" secondItem="gBR-8n-YBS" secondAttribute="trailing" constant="14" id="fHX-jl-tXJ"/>
-                            <constraint firstItem="gBR-8n-YBS" firstAttribute="leading" secondItem="m8N-cE-fTx" secondAttribute="leadingMargin" id="mJ3-zR-EsJ"/>
-                            <constraint firstItem="Ipr-y3-8kt" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="73" id="sUM-30-8Do"/>
-                            <constraint firstItem="Ipr-y3-8kt" firstAttribute="centerX" secondItem="lIB-Uc-ICq" secondAttribute="centerX" id="tuA-80-xEG"/>
+                            <constraint firstItem="Ipr-y3-8kt" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="92" id="sUM-30-8Do"/>
+                            <constraint firstItem="Ipr-y3-8kt" firstAttribute="centerX" secondItem="lIB-Uc-ICq" secondAttribute="centerX" constant="-85.5" id="tuA-80-xEG"/>
                             <constraint firstItem="ZWA-MD-FE0" firstAttribute="centerY" secondItem="4L4-iK-a96" secondAttribute="centerY" id="zsD-l6-0UI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lIB-Uc-ICq"/>
@@ -505,7 +498,8 @@
                     <tabBarItem key="tabBarItem" title="App" image="app_prefs_diverse" id="Gds-oU-haA"/>
                     <size key="freeformSize" width="300" height="300"/>
                     <connections>
-                        <outlet property="downloadTime" destination="gBR-8n-YBS" id="MEX-za-kph"/>
+                        <outlet property="downloadTimePicker" destination="Rwr-Qw-FYp" id="7E3-tJ-XEZ"/>
+                        <outlet property="downloadTimePickerLabel" destination="Ipr-y3-8kt" id="Un1-Ze-HDh"/>
                         <outlet property="useAutomatedDownload" destination="ZWA-MD-FE0" id="Gj6-fg-pAY"/>
                     </connections>
                 </viewController>
