--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -430,7 +431,7 @@
                         <outlet property="groupItems" destination="tvh-hw-pZM" id="87U-K3-xnZ"/>
                         <outlet property="groupNumbers" destination="0gR-qF-yWw" id="2Dj-Zs-k2D"/>
                         <outlet property="monospaced" destination="T0z-iu-r8v" id="AmS-zo-TgH"/>
-                        <outlet property="multiLinte" destination="gjV-LJ-HMF" id="wZU-sp-mcZ"/>
+                        <outlet property="multiLine" destination="gjV-LJ-HMF" id="Y3Z-b8-Jrl"/>
                         <outlet property="useWordSeparator" destination="ol3-no-ug7" id="z9W-ll-axt"/>
                     </connections>
                 </viewController>
